--- a/src/index.html
+++ b/src/index.html
@@ -20,7 +20,7 @@
         <div class="col">
 
           <label for="fullname"> <!-- Include first name, last name AND title -->
-            Name:
+            Name: Harry Turner
           </label>
           <h3 id="fullname"></h3>
 
@@ -29,7 +29,7 @@
         <div class="col">
 
           <label for="email">
-            Email:
+            Email: harry@hotmail.co.uk
           </label>
           <h4 id="email"></h4>
 
